apps/servarr/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: servarr
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: servarr-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: http
      protocol: TCP
